--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,7 +7,20 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+<div id="user_nav">
+	<% if user_signed_in? %>
+		Logged in as <strong><%= current_user.email %> </strong>.
+		<%= link_to 'Edit Profile', edit_user_registration_path %> |
+		<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+	<% else %>
+		<%= link_to "Sign Up", new_user_registration_path %> |
+		<%= link_to "Login", new_user_session_path %>
+		
+		<%= link_to "Sign in with Google", user_omniauth_authorize_path(:google_oauth2) %>
+	<% end %>
+</div>
+<p class="notice"><%= notice %></p>
+<p class="alert"><%= alert %></p>
 <%= yield %>
 
 </body>
