--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,9 +8,12 @@
 </head>
 <body>
 <div id="user_nav">
+		<%= link_to 'Home', root_path %> |
+
 	<% if user_signed_in? %>
 		Logged in as <strong><%= current_user.email %> </strong>.
-		<%= link_to 'Edit Profile', edit_user_registration_path %> |
+		<%= link_to 'Edit Log In Info', edit_user_registration_path %> |
+		<%= link_to 'Change Profile Model', new_user_profile_path(current_user) %> |
 		<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
 	<% else %>
 		<%= link_to "Sign Up", new_user_registration_path %> |
