jquery calendar plug in now working

--- a/app/views/appointments/index.html.erb
+++ b/app/views/appointments/index.html.erb
@@ -7,3 +7,5 @@
 		 <%= link_to "Delete", appointment_path(appt), data: {confirm:  "Are you sure you want to delete?"}, :method => :delete %></li>
 	<% end %> 
 </ul>
+
+<div id="calendar"></div>
