--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -9,3 +9,11 @@
   <%= f.submit "Create" %>
 <% end %>
 
+<div id="calendar"></div>
+
+<p id="basicExample">
+    <input type="text" class="date start" />
+    <input type="text" class="time start" /> to
+    <input type="text" class="time end" />
+    <input type="text" class="date end" />
+</p>
