--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -5,16 +5,19 @@
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
+
 </head>
 <body>
 <div id="user_nav">
 		<%= link_to 'Home', root_path %> |
 
-	<% if user_signed_in? %>
+	<% if user_signed_in? && current_user.profile %>
 		Logged in as <strong><%= current_user.email %> </strong>.
 		<%= link_to 'Edit Log In Info', edit_user_registration_path(current_user) %> |
 		<%= link_to 'Change Profile Model', edit_user_profile_path(current_user.profile.id, current_user.id) %> |
 		<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
+
+		<%= link_to "Make a pair appointment", new_appointment_path %>
 	<% else %>
 		<%= link_to "Sign Up", new_user_registration_path %> |
 		<%= link_to "Login", new_user_session_path %>
