--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,9 @@
 		<%= link_to 'Edit Log In Info', edit_user_registration_path(current_user) %> |
 		<%= link_to 'Change Profile Model', edit_user_profile_path(current_user.profile.id, current_user.id) %> |
 		<%= link_to "Log Out", destroy_user_session_path, method: :delete %>
-
-		<%= link_to "Make a pair appointment", new_appointment_path %>
+		|
+		<%= link_to "Make a pair appointment", new_appointment_path %>|
+		<%= link_to "Set up your availability", new_availability_path %>
 	<% else %>
 		<%= link_to "Sign Up", new_user_registration_path %> |
 		<%= link_to "Login", new_user_session_path %>
