--- a/app/views/appointments/new.html.erb
+++ b/app/views/appointments/new.html.erb
@@ -1,7 +1,8 @@
 
 <%= form_for @appointment, url: {action: "create"}, html: {class: "nifty_form", id: "basicExample"} do |f| %>
+<%= f.hidden_field :user_id, :value => current_user.id %>
 <% f.label :title %>
-Title: <%= f.text_field :title %>
+Title: <%= f.text_field :title %><br>
   <% f.label :start %>
   Start date: 
   <%= f.datetime_field :start, class: "date start" %>
