--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,10 +1,10 @@
 <div class="wholepagewrapper">
 <div class="profilewrapper">  
-  <%= render partial: "profiles/show", locals: { profile: @profile } %>
+  <%= render partial: "profiles/show", locals: { profile: @currentprofile } %>
 </div>
 
 
-<div class="postswrapper">
+<div class="contentwrapper">
 <p id="notice"><%= notice %></p>
 
 <h1>Listing Posts</h1>
@@ -26,7 +26,7 @@
       <%= post.created_at.strftime("%D @ %l:%M %P") %>
     </div>
   
-      <p><%= link_to post.user.profile.fname, user_path(post.user_id) %> says -  </p>
+      <p><%= link_to post.user.profile.fname, user_profile_path(post.user_id, post.user_id) %> says -  </p>
    
     <div class="body">
       <%= post.body %>
@@ -62,9 +62,7 @@
               <span class='delete-button link'>
                 <%= link_to 'Delete', post_comment_path(post.id, comment.id), method: :delete, :class => 'button-two' %>
               </span>
-            <!--   <span class='edit-button link'>
-                <%= link_to 'Edit', post_comment_path(post.id, comment.id), method: :update, :class => 'button-two' %>
-              </span> --><br>
+            
             <% end %>
           <% end %>
         </div>
@@ -92,7 +90,7 @@
     <h2 class="coolusers">Check out all of our programmers</h2>
     <ol class="coolusers">
     <% @users.each do |user| %>
-      <li ><%= link_to user.profile.fname, user_path(user.id) %></li>
+      <li ><%= link_to user.profile.fname, user_profile_path(user.id, user.id) %></li>
       <% end %>
   </ol>
   </div>
