--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -13,9 +13,11 @@
 
 
 		<div id="otherusercalendar"></div>
-
-
-		<%= render partial: "profiles/form" %>
+		<div id="modalinfoouter">
+			<div id="modalinfo">
+				<%= render partial: "profiles/form" %>
+			</div>
+		</div>
 	</div>
 
 
