--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,4 +1,4 @@
-
+<span class="close">x</span>
 <%= form_for @appointment, html: {class: "nifty_form", id: "basicExample"} do |f| %>
 <%= f.hidden_field :mentee_id, :value => current_user.id %>
 <%= f.hidden_field :mentor_id, :value => @profile.user.id %>
