--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -7,6 +7,10 @@
 <div class="contentwrapper">
 <p id="notice"><%= notice %></p>
 
+<h2> Post a pair request</h2>
+
+<%= render partial: 'posts/form' %>
+
 <h1>Listing Posts</h1>
 
 
