--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,100 +4,17 @@
 </div>
 
 
-<div class="contentwrapper">
-<p id="notice"><%= notice %></p>
+  <div class="contentwrapper">
+  <p id="notice"><%= notice %></p>
 
-<h2> Post a pair request</h2>
+  <h2> Search users skills</h2>
+  <%= render partial: 'posts/searchskills' %>
 
-<%= render partial: 'posts/form' %>
+  <h2> Post a pair request</h2>
 
-<h1>Listing Posts</h1>
+  <%= render partial: 'posts/form' %>
 
+  <%= render partial: 'posts/feed' %>
 
-
-<br>
-
-<%= link_to 'New Post', new_post_path %>
-
-<hr>
-<div class="feed">
-<% @posts.reverse.first(10).each do |post| %>
-  <div class="whole-post">
-    <div class="title">
-      <%= post.title %>
-    </div>
-    <div class="time_post">
-      <%= post.created_at.strftime("%D @ %l:%M %P") %>
-    </div>
-  
-      <p><%= link_to post.user.profile.fname, user_profile_path(post.user_id, post.user_id) %> says -  </p>
-   
-    <div class="body">
-      <%= post.body %>
-    </div>
-    <% if logged_in? %>
-      <span class='comment-button link'><button class="button">Add a comment.</button></span>
-      <span class='comment-view link'>
-        <% if post.comments.length >= 1 %>
-          <button class="button">View comments.(<%= post.comments.length %>)</button>
-        <% end %>
-      </span>
-    <% end %>
-
-    <% if session[:user_id] == post.user_id %>
-      <span class='button link'><%= link_to 'Edit Post', edit_post_path(post) %></span>
-      <span class='button link'><%= link_to 'Delete Post', post, :method => :delete %></span>
-    <% end %>
-
-    <% post.comments.reverse.first(3).each do |comment|%>
-      <div class="comment">
-        <div class="column-one">
-          <%= comment.user.profile.fname %><br>
-          <span class='date'><%= comment.created_at.strftime("%l:%M on ")%></span>
-          <span class='date'><%= comment.created_at.strftime("%D")%></span>
-        </div>
-        <div class="column-two">
-          <%= comment.message %>
-          <% if logged_in? %>
-            <% if current_user.id == post.user.id && session[:user_id] != comment.user_id %>
-              <span class='delete-button link'> <%= link_to 'Delete', post_comment_path(post.id, comment.id), method: :delete, :class => 'button-two' %></span>
-            <% end %>
-            <% if session[:user_id] == comment.user_id %>
-              <span class='delete-button link'>
-                <%= link_to 'Delete', post_comment_path(post.id, comment.id), method: :delete, :class => 'button-two' %>
-              </span>
-            
-            <% end %>
-          <% end %>
-        </div>
-
-
-      </div>
-    <% end %>
-<br>
-    <% if logged_in? %>
-      <div class="comment-field">
-        <%= form_for [post, post.comments.build] do |i| %>
-          <%= i.hidden_field :user_id, :value => current_user.id %>
-          <%= i.hidden_field :post_id, :value => post.id %>
-          <%= i.label :message %>
-          <%= i.text_area :message, :id => "message_area" %>
-          <%= i.submit :create %>
-        <% end %>
-      </div>
-    <% end %>
   </div>
-<% end %>
-</div>
-<div class="outu"
-  <div class="coolu">
-    <h2 class="coolusers">Check out all of our programmers</h2>
-    <ol class="coolusers">
-    <% @users.each do |user| %>
-      <li ><%= link_to user.profile.fname, user_profile_path(user.id, user.id) %></li>
-      <% end %>
-  </ol>
-  </div>
-</div>
-</div>
 </div>
