--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,5 +1,6 @@
 
 <div id="profile_wrapper">
+hey now
    <h2>Create Your Profile</h2>
    <%= form_for [current_user, @profile], :html => { :multipart => true } do |f| %>
    <%= f.label :fname, "First Name" %>
