--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -11,6 +11,7 @@
 
 .profilewrapper {
 	max-width: 30%;
+  background-color: #5ECBFF;
 
 }
 .contentwrapper{
@@ -36,5 +37,5 @@
         #modalinfo{
         	background-color: black;
         	color: orange;
-              text-align: center;
+          text-align: center;
             }
