--- a/app/views/profiles/_show.html.erb
+++ b/app/views/profiles/_show.html.erb
@@ -1,36 +1,37 @@
+<div class="profilewrapper">
+      <h2><%= link_to "#{current_user.profile.fname}'s Profile", edit_user_profile_path(current_user.profile.id, current_user.id)  %></h2>
 
-  <h2><%= link_to "#{current_user.profile.fname}'s Profile", edit_user_profile_path(current_user.profile.id, current_user.id)  %></h2>
+     
 
- 
+       <%= button_to 'Edit Profile', edit_user_profile_path(current_user.profile.id, current_user.id), method: :get, :class => "form_button" %><br>
+      <h2><%= current_user.profile.fname %>'s Appointments</h2>
 
-   <%= button_to 'Edit Profile', edit_user_profile_path(current_user.profile.id, current_user.id), method: :get, :class => "form_button" %><br>
-  <h2><%= current_user.profile.fname %>'s Appointments</h2>
-
-  <ol>
-    <% current_user.menteeing_appointments.each do |appt| %>
-      <li class= "usersappointments">
-      <%= appt.title %> at: <%= appt.start.strftime("%b %d %Y")%>   |  <%= appt.starttime.strftime("%I:%M%p") %> <br>
-      ends at: <%= appt.end.strftime("%b %d %Y") %> |      <%= appt.endtime.strftime("%I:%M%p") %> 
-      with <%= appt.mentor.profile.fname %>
-    <%= link_to "Edit", edit_appointment_path(appt) %> 
-    |
-     <%= link_to "Delete", appointment_path(appt), data: {confirm:  "Are you sure you want to delete?"}, :method => :delete %>
-     </li>
-    <% end %>
-  </ol>
-
-
+      <ol>
+        <% current_user.menteeing_appointments.each do |appt| %>
+          <li class= "usersappointments">
+          <%= appt.title %> at: <%= appt.start.strftime("%b %d %Y")%>   |  <%= appt.starttime.strftime("%I:%M%p") %> <br>
+          ends at: <%= appt.end.strftime("%b %d %Y") %> |      <%= appt.endtime.strftime("%I:%M%p") %> 
+          with <%= appt.mentor.profile.fname %>
+        <%= link_to "Edit", edit_appointment_path(appt) %> 
+        |
+         <%= link_to "Delete", appointment_path(appt), data: {confirm:  "Are you sure you want to delete?"}, :method => :delete %>
+         </li>
+        <% end %>
+      </ol>
 
 
 
-<div id="mycalendar"></div>
 
 
-<h2><%= @currentprofile.fname %>'s Skills</h2>
-<ol>
- <% @currentprofile.user.skills.each do |skill| %>
-    <li class= "userskills"> <%= skill.skill %></li>
-  <% end %>
-  </ol>
+    <div id="mycalendar"></div>
 
-<%= button_to "Cancel my account", "/users/#{current_user.id}/delete", method: :delete, :class => "form_button" %>
+
+    <h2><%= @currentprofile.fname %>'s Skills</h2>
+    <ol>
+     <% @currentprofile.user.skills.each do |skill| %>
+        <li class= "userskills"> <%= skill.skill %></li>
+      <% end %>
+      </ol>
+
+    <%= button_to "Cancel my account", "/users/#{current_user.id}/delete", method: :delete, :class => "form_button" %>
+</div>
