--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -1,37 +1,46 @@
+<div id="profilepagewrapper">
+<%= link_to 'Edit Log In Info', edit_user_registration_path(current_user) %> 
+  <div id="profile_wrapper">
+     <h2>Edit Your Profile</h2>
+     <%= form_for [current_user, @profile], :html => { :multipart => true } do |f| %>
+     <%= f.label :fname, "First Name" %>
+     <%= f.text_field :fname %><br>
+     <%= f.label :lname, "Last Name" %>
+     <%= f.text_field :lname %><br>
+     <%= f.label :bio, "About yourself" %>
+     <%= f.text_field :bio %><br>
+     <%= f.label :workexp, "Coding Work Experience" %>
+     <%= f.text_field :workexp %><br>
+     <%= f.label :teachexp, "Coding Teaching Experience" %>
+     <%= f.text_field :teachexp %><br>
+     <%= f.label :skillexp, "Coding Skills Experience" %>
+     <%= f.text_field :skillexp %><br>
 
-<div id="profile_wrapper">
-   <h2>Create Your Profile</h2>
-   <%= form_for [current_user, @profile], :html => { :multipart => true } do |f| %>
-   <%= f.label :fname, "First Name" %>
-   <%= f.text_field :fname %><br>
-   <%= f.label :lname, "Last Name" %>
-   <%= f.text_field :lname %><br>
-   <%= f.label :bio, "About yourself" %>
-   <%= f.text_field :bio %><br>
-   <%= f.label :workexp, "Coding Work Experience" %>
-   <%= f.text_field :workexp %><br>
-   <%= f.label :teachexp, "Coding Teaching Experience" %>
-   <%= f.text_field :teachexp %><br>
-   <%= f.label :skillexp, "Coding Skills Experience" %>
-   <%= f.text_field :skillexp %><br>
+     <%= f.submit :create, :class => "form_button" %>
+     <% end %>
 
-   <%= f.submit :create, :class => "form_button" %>
-   <% end %>
+     <div id="availabilitywrapper">
+         <h2>Whats your weekly availability?</h2>
+         <%= render partial: 'availabilities/availabilityform' %>
+     </div>
+
+
+  <div id="skills_wrapper">
+     <h2 class="skillstitle">What programming skills are you familiar with?</h2>
+    <%= form_for [current_user, @skill],remote: :true, :id => 'skillform' do |f| %>
+        <%= f.label(:skill, "What Skills Do You Have?") %><br>
+        <%= f.text_field :skill %>
+    
+
+
+        <%= f.submit "Submit Skills", id: "skill_add" %>
+
+     <% end %>
+  <ul>
+     <% current_user.skills.each do |s|%>
+      <li>  <%=  s.skill %>
+          <%= link_to "Delete", user_skill_path(current_user, s), data: {confirm:  "Are you sure you want to delete?"}, :method => :delete %></li>
+     <% end%>
+     </ul>
+  </div>
 </div>
-
-<div id="skills_wrapper">
-   <h2>What programming skills are you familiar with?</h2>
-  <%= form_for [current_user, @skill],remote: :true, :id => 'skillform' do |f| %>
-      <%= f.label(:skill, "What Skills Do You Have?") %><br>
-      <%= f.text_field :skill %>
-  
-
-
-      <%= f.submit "Submit Skills", id: "skill_add" %>
-
-   <% end %>
-<ul>
-   <% current_user.skills.each do |s|%>
-    <li>  <%=  s.skill %>
-        <%= link_to "Delete", user_skill_path(current_user, s), data: {confirm:  "Are you sure you want to delete?"}, :method => :delete %></li>
-   <% end%>
