--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -1,37 +1,40 @@
+<div id="profilepagewrapper">
+      <div id="profile_wrapper">
 
-<div id="profile_wrapper">
-hey now
-   <h2>Create Your Profile</h2>
-   <%= form_for [current_user, @profile], :html => { :multipart => true } do |f| %>
-   <%= f.label :fname, "First Name" %>
-   <%= f.text_field :fname %><br>
-   <%= f.label :lname, "Last Name" %>
-   <%= f.text_field :lname %><br>
-   <%= f.label :bio, "About yourself" %>
-   <%= f.text_field :bio %><br>
-   <%= f.label :workexp, "Coding Work Experience" %>
-   <%= f.text_field :workexp %><br>
-   <%= f.label :teachexp, "Coding Teaching Experience" %>
-   <%= f.text_field :teachexp %><br>
-   <%= f.label :skillexp, "Coding Skills Experience" %>
-   <%= f.text_field :skillexp %><br>
+         <h2>Create Your Profile</h2>
+         <%= form_for [current_user, @profile], :html => { :multipart => true } do |f| %>
+         <%= f.label :fname, "First Name" %>
+         <%= f.text_field :fname %><br>
+         <%= f.label :lname, "Last Name" %>
+         <%= f.text_field :lname %><br>
+         <%= f.label :bio, "About yourself" %>
+         <%= f.text_field :bio %><br>
+         <%= f.label :workexp, "Coding Work Experience" %>
+         <%= f.text_field :workexp %><br>
+         <%= f.label :teachexp, "Coding Teaching Experience" %>
+         <%= f.text_field :teachexp %><br>
+         <%= f.label :skillexp, "Coding Skills Experience" %>
+         <%= f.text_field :skillexp %><br>
 
-   <%= f.submit :create, :class => "form_button" %>
-   <% end %>
+         <%= f.submit :create, :class => "form_button" %>
+         <% end %>
+      
+
+      <div id="skills_wrapper">
+         <h2 class="skillstitle">What programming skills are you familiar with?</h2>
+        <%= form_for [current_user, @skill], url: {controller: :skills, action: "create"}, :id => 'skillform' do |f| %>
+            <%= f.label(:skill, "What Skills Do You Have?") %><br>
+            <%= f.text_field :skill %>
+         
+
+
+            <%= f.submit "Submit Skills", id: "skill_add" %>
+
+         <% end %>
+
+         <% current_user.skills.each do |s|%>
+         <%= content_tag :h2, s.skill %> <br/>
+         <% end%>
+      </div>   
+      </div>
 </div>
-
-<div id="skills_wrapper">
-   <h2>What programming skills are you familiar with?</h2>
-  <%= form_for [current_user, @skill], url: {controller: :skills, action: "create"}, :id => 'skillform' do |f| %>
-      <%= f.label(:skill, "What Skills Do You Have?") %><br>
-      <%= f.text_field :skill %>
-   
-
-
-      <%= f.submit "Submit Skills", id: "skill_add" %>
-
-   <% end %>
-
-   <% current_user.skills.each do |s|%>
-   <%= content_tag :h2, s.skill %> <br/>
-   <% end%>
