--- a/app/views/availabilities/_availabilityform.html.erb
+++ b/app/views/availabilities/_availabilityform.html.erb
@@ -1,4 +1,4 @@
-<%= form_for @availability, url: {action: "create"}, html: {class: "nifty_form", id: "basicExample"} do |f| %>
+<%= form_for @availability, html: {class: "nifty_form", id: "basicExample"} do |f| %>
   <%= f.hidden_field :user_id, :value => current_user.id %>
    
    <% f.label :dow %>
