--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -15,6 +15,8 @@
          <%= f.text_field :teachexp %><br>
          <%= f.label :skillexp, "Coding Skills Experience" %>
          <%= f.text_field :skillexp %><br>
+         <%= f.label :skype, "Skype Username" %>
+         <%= f.text_field :skype %><br>
 
          <%= f.submit :create, :class => "form_button" %>
          <% end %>
