--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -10,7 +10,7 @@ body{
 	background-color: black;
 	width: 100%;
 	height: 40px;
-	padding: 20px 0px;
+	padding-top: 20px;
 	a{
 	font-size: 1.4em;
     color: white;
