--- a/app/views/profiles/edit.html.erb
+++ b/app/views/profiles/edit.html.erb
@@ -23,6 +23,7 @@
 
      <div id="availabilitywrapper">
          <h2>Whats your weekly availability?</h2>
+         <p>Be sure to enter your availability or nobody can make an appointment with you!</p>
          <%= render partial: 'availabilities/availabilityform' %>
      </div>
 
