fonts for production

--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -1,6 +1,6 @@
 @font-face{
 	font-family: "space";
-	src: url('kenney-space.regular.ttf') format("truetype");
+	src: url('/kenney-space.regular.ttf') format("truetype");
 
 }
 body{
