--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -128,3 +128,17 @@ ul{
 .whole-post{
 	border: 5px solid purple;
 }
+.notice{
+	font-size: 1.5em;
+	background-color: blue;
+	font-weight: bold;
+	color: red;
+	z-index: 2;
+}
+.alert{
+	font-size: 1.5em;
+	background-color: blue;
+	font-weight: bold;
+	color: red;
+	z-index: 2;
+}
