--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -107,7 +107,7 @@ body{
 }
 #profilepagewrapper{
 	background-color: #5ECBFF;
-	height: 600px;
+	height: 100%;
 }
 #profile_wrapper{
 	width: 40%;
@@ -151,7 +151,7 @@ body{
 			    clear: left;
 			    width: 250px;
 			    text-align: left;
-			    	height: 25px;
+			    height: 25px;
 			}
 			input{
 				display: inline-block;
