--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -1,22 +1,34 @@
 
 <span class="close">x</span>
 <%= form_for @appointment, html: {class: "nifty_form", id: "basicExample"} do |f| %>
-<%= f.hidden_field :mentee_id, :value => current_user.id %>
-<%= f.hidden_field :mentor_id, :value => @profile.user.id %>
-<% f.label :title %>
-Title: <%= f.text_field :title %><br>
-  <% f.label :start %>
-  Start date: 
-  <%= f.datetime_field :start, class: "date start" %>
-  <% f.label :starttime %>
-  <%= f.text_field :starttime, class: "time start" %>
-  <br>
-  <% f.label :end %>
-  End date & time:
-  <%= f.datetime_field :end, class: "date end"  %>
-   <% f.label :endtime %>
-  <%= f.text_field :endtime, class: "time end" %><br>
+  <table>
 
- 
-  <%= f.submit "Create" %>
+      <%= f.hidden_field :mentee_id, :value => current_user.id %>
+      <%= f.hidden_field :mentor_id, :value => @profile.user.id %>
+      <tr>
+        <td> <%= f.label :title, "Title:" %></td>
+        <td> <%= f.text_field :title %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :start, "Start date & time:" %></td>
+        <td><%= f.datetime_field :start, class: "date start" %></td>
+        <td><%= f.text_field :starttime, class: "time start" %></td>
+      </tr>
+      <tr>
+        <td><%= f.label :end, "End date & time:" %></td>
+        <td><%= f.datetime_field :end, class: "date end"  %></td>
+        <td><%= f.text_field :endtime, class: "time end" %><br></td>
+      </tr>
+      <tr>
+        <td></td>
+        <td><%= f.submit "Create" %></td>
+      </tr>  
+        
+       
+        
+        
+     
+
+       
+  </table>
 <% end %>
