--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -108,6 +108,7 @@ body{
 #profilepagewrapper{
 	background-color: #5ECBFF;
 	height: 100%;
+	min-height: 600px;
 }
 #profile_wrapper{
 	width: 40%;
