working on finishing touches

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,7 +8,7 @@
 
 </head>
 <body>
-<div id="user_nav">
+<div id="user_navr">
 		<%= link_to 'Home', root_path %> |
 
 	<% if user_signed_in? && current_user.profile %>
