--- a/app/assets/stylesheets/login.scss
+++ b/app/assets/stylesheets/login.scss
@@ -6,10 +6,10 @@
 body{
 	background-color: black;
 }
-#user_nav{
+#user_navr{
 	background-color: black;
 	width: 100%;
-	height: 40px;
+	height: 95px;
 	padding-top: 20px;
 	a{
 	font-size: 1.4em;
@@ -113,6 +113,7 @@ body{
 #profile_wrapper{
 	width: 40%;
 	margin: auto;
+	height: 1500px;
 	h2{
 		margin-top: 0px;
 		padding-top: 30px;
