--- a/app/assets/stylesheets/profile.scss
+++ b/app/assets/stylesheets/profile.scss
@@ -46,8 +46,8 @@
               top: 0px;
               padding-top: 100px;
               padding-bottom: 100px;
-              background-color: grey;
-             
+              background-color: rgba(0,0,0,0.6);
+              // opacity: .7;
               display: none;
             }
         #modalinfo{
@@ -57,16 +57,22 @@
           text-align: center;
           width: 40%;
           margin: auto;
-          opacity: 1;
+          // opacity: 1;
           z-index: 2;
         
           }
             
-            .close{
+            .closer{
               float: right;
               font-size: 3em;
+              opacity: 1;
+              color: orange;
+              &:hover{
+                color:yellow;
+              }
             }
             #basicExample td{
               padding: 10px;
             }
+           
           
