--- a/app/views/availabilities/_availabilityform.html.erb
+++ b/app/views/availabilities/_availabilityform.html.erb
@@ -4,15 +4,15 @@
   <%= f.hidden_field :user_id, :value => current_user.id %>
 <tr>
 	<td><%= f.label :dow, "Regularly available day of the week:" %></td> 
-	<td><%= f.select :dow, [['Sunday', 0],['Monday', 1], ['Tuesday', 2], ['Wednesday', 3], ['Thursday', 4], ['Friday', 5], ['Saturday', 6]]%></td>
+	<td><%= f.select :dow, [['Sunday', 0],['Monday', 1], ['Tuesday', 2], ['Wednesday', 3], ['Thursday', 4], ['Friday', 5], ['Saturday', 6]], :class => 'form-control'%></td>
 </tr>   
 <tr>
 	<td><%= f.label :start, "Start time:" %></td>
-	<td><%= f.text_field :start, class: "time" %></td>   
+	<td><%= f.text_field :start, class: "time form-control" %></td>   
 </tr>
 <tr>
 	<td><%= f.label :end, "End time:" %></td>
-	<td><%= f.text_field :end , class: "time"%></td>
+	<td><%= f.text_field :end , class: "time form-control"%></td>
 </tr>
   <tr>
   	<td><%= f.submit "Create" %></td>
