--- a/app/views/posts/_feed.html.erb
+++ b/app/views/posts/_feed.html.erb
@@ -21,7 +21,7 @@
       <%= post.body %>
 
     </div>
-    <p>-<%= link_to post.user.profile.fname, user_profile_path(post.user_id, post.user_id) %></p>
+    <p>-<%= link_to post.user.profile.fname, user_profile_path(post.user_id, post.user_id), :class => 'userlink' %></p>
     <% if logged_in? %>
       <span class='comment-button link'><button class="button">Add a comment.</button></span>
       <span class='comment-view link'>
@@ -72,7 +72,7 @@
           <%= i.hidden_field :user_id, :value => current_user.id %>
           <%= i.hidden_field :post_id, :value => post.id %>
           <%= i.label :message %>
-          <%= i.text_area :message, :id => "message_area" %>
+          <%= i.text_area :message, :id => "message_area", :class => 'form-control' %>
           <%= i.submit :create %>
         <% end %>
       </div>
