--- a/app/views/posts/_searchskills.html.erb
+++ b/app/views/posts/_searchskills.html.erb
@@ -1,12 +1,12 @@
 <%= form_tag root_path, :method => 'get' do %>
-	<%= text_field_tag :search, params[:search] %>
+	<%= autocomplete_field_tag :search, params[:search], :class => 'form-control' %>
 <%= submit_tag "Search for users with skills", :name => nil %>
 <% end %>
 
 <% if @userreturn.present? %>
 <ul>
 	<% @userreturn.each do |u| %>
-		<li> <%= link_to u.profile.fname, user_profile_path(u.id, u.id) %> </li>
+		<li> <%= link_to u.profile.fname, user_profile_path(u.id, u.id), :class => 'userlink' %> </li>
 	<% end %>
 </ul>
 <% end %>
