--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -5,10 +5,11 @@
 
 	<div class="contentwrapper" data-user-id="<%= @profile.user.id %>">
 		<h1><%= @profile.fname %></h1>
+		<h4><%= @profile.fname %>'s skills: </h4>
 		
-		<ul>
+		<ul class='profileskills'>
 		<% @profile.user.skills.each do |skill| %>
-			<li><%= skill.skill %></li>
+			<li><%= skill.skill %>,</li>
 		<% end %>
 		</ul>
 		<div class="legend">
@@ -18,15 +19,15 @@
 				</tr>
 				<tr>
 					<td>Open availability:</td>
-					<td>Green</td>
+					<td class='green'>Green</td>
 				</tr>
 				<tr>
 					<td>Learning appointment:</td>
-					<td>Yellow</td>
+					<td class='yellow'>Yellow</td>
 				</tr>
 				<tr>
 					<td>Teaching appointment:</td>
-					<td>Blue</td>
+					<td class='blue'>Blue</td>
 				</tr>
 				</table>
 		</div>
@@ -35,6 +36,18 @@
 
 		<div id="otherusercalendar"></div>
 		
+		<div class="bio">
+		<%= @profile.bio %>
+		<%= @profile.workexp %>
+		<%= @profile.teachexp %>
+		<%= @profile.workexp %>
+
+		</div>
+
+
+
+
+
 		<div id="modalinfoouter">
 			<div id="modalinfo">
 				<%= render partial: "profiles/form" %>
